Add these include paths else (at least) the test won't build on OSX.

--- a/configure.ac
+++ b/configure.ac
@@ -29,6 +29,7 @@ AC_SUBST(MISCDIR)
 AC_SUBST(QUICKCHECKDIR)
 
 CPPFLAGS="$CPPFLAGS -Wall -Os -g -pedantic-errors -DMDDS_DEBUG_NODE_BASE -DMDDS_UNIT_TEST -std=c++11"
+CPPFLAGS="$CPPFLAGS -I/usr/include -I/usr/local/include"
 
 if test "$debug_stdcxx" = "yes"; then
   CPPFLAGS="$CPPFLAGS -D_GLIBCXX_DEBUG"
