--- a/example/Makefile.in
+++ b/example/Makefile.in
@@ -1,31 +1,5 @@
-#************************************************************************
-#
-# Copyright (c) 2010 Kohei Yoshida
-#
-# Permission is hereby granted, free of charge, to any person
-# obtaining a copy of this software and associated documentation
-# files (the "Software"), to deal in the Software without
-# restriction, including without limitation the rights to use,
-# copy, modify, merge, publish, distribute, sublicense, and/or sell
-# copies of the Software, and to permit persons to whom the
-# Software is furnished to do so, subject to the following
-# conditions:
-#
-# The above copyright notice and this permission notice shall be
-# included in all copies or substantial portions of the Software.
-#
-# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
-# OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
-# HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
-# WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
-# OTHER DEALINGS IN THE SOFTWARE.
-#
-#***********************************************************************
 
-CPPFLAGS=@CPPFLAGS_NODEBUG@ -I../include
+CPPFLAGS=@CPPFLAGS_NODEBUG@ -I../include -std=c++11
 
 EXEC= \
 	segment_tree \
@@ -33,7 +7,8 @@ EXEC= \
 	rectangle_set \
 	point_quad_tree \
 	mixed_type_matrix \
-	multi_type_vector
+	multi_type_vector \
+	trie_map
 
 all: $(EXEC)
 
@@ -48,6 +23,8 @@ point_quad_tree: point_quad_tree.cpp
 mixed_type_matrix: mixed_type_matrix.cpp
 
 multi_type_vector: multi_type_vector.cpp
+
+trie_map: trie_map.cpp
 
 clean:
 	rm -f $(EXEC)
