--- a/vsprojects/segment_tree/segment_tree.vcproj
+++ b/vsprojects/segment_tree/segment_tree.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="MDDS_UNIT_TEST;MDDS_DEBUG_NODE_BASE;MDDS_HASH_CONTAINER_BOOST"
+				PreprocessorDefinitions="MDDS_UNIT_TEST;MDDS_DEBUG_NODE_BASE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -114,7 +114,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				AdditionalIncludeDirectories=""
-				PreprocessorDefinitions="MDDS_UNIT_TEST;MDDS_DEBUG_NODE_BASE;MDDS_HASH_CONTAINER_BOOST"
+				PreprocessorDefinitions="MDDS_UNIT_TEST;MDDS_DEBUG_NODE_BASE"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
 				WarningLevel="3"
