I need to add it here too.

--- a/configure.ac
+++ b/configure.ac
@@ -75,6 +75,7 @@ multi_type_matrix_test_mem.mem:src/test.mem.in
 multi_type_vector_test_event_mem.mem:src/test.mem.in
 multi_type_vector_test_custom_mem.mem:src/test.mem.in
 multi_type_vector_test_default_mem.mem:src/test.mem.in
+multi_type_vector_test_side_iterator_mem.mem:src/test.mem.in
 point_quad_tree_test_mem.mem:src/test.mem.in
 rectangle_set_test_mem.mem:src/test.mem.in
 segment_tree_test_mem.mem:src/test.mem.in
