--- a/example/Makefile.in
+++ b/example/Makefile.in
@@ -26,6 +26,8 @@ multi_type_vector_event1: multi_type_vector_event1.cpp
 multi_type_vector_element_block1: multi_type_vector_element_block1.cpp
 multi_type_vector_pos_hint: multi_type_vector_pos_hint.cpp
 
+multi_type_matrix: multi_type_matrix.cpp
+
 trie_map: trie_map.cpp
 
 packed_trie_map: packed_trie_map.cpp
