--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,4 +8,4 @@ build:
     - apt -y install libboost-all-dev || apt-get -y install libboost-all-dev
     - ldconfig
   script: 
-    - ./autogen.sh && make -j $(nproc) && make -j $(nproc) check
+    - ./autogen.sh && make -j $(nproc) check
