This builds fine now, with MSVC 15.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,8 +43,7 @@ add_test(sorted-string-map-test sorted-string-map-test func)
 #add_test(trie-map-test trie-map-test func)
 add_test(multi-type-matrix-test multi-type-matrix-test func)
 add_test(multi-type-matrix-test-walk multi-type-matrix-test-walk func)
-#TODO: this currently fails to build.
-#add_test(multi-type-vector-test-collection multi-type-vector-test-collection func)
+add_test(multi-type-vector-test-collection multi-type-vector-test-collection func)
 add_test(multi-type-vector-test-custom multi-type-vector-test-custom func)
 add_test(multi-type-vector-test-default multi-type-vector-test-default func)
 add_test(multi-type-vector-test-event multi-type-vector-test-event func)
@@ -60,7 +59,7 @@ add_dependencies(check sorted-string-map-test)
 add_dependencies(check trie-map-test)
 add_dependencies(check multi-type-matrix-test)
 add_dependencies(check multi-type-matrix-test-walk)
-#add_dependencies(check multi-type-vector-test-collection)
+add_dependencies(check multi-type-vector-test-collection)
 add_dependencies(check multi-type-vector-test-custom)
 add_dependencies(check multi-type-vector-test-default)
 add_dependencies(check multi-type-vector-test-event)
