--- a/configure.ac
+++ b/configure.ac
@@ -86,6 +86,7 @@ segment_tree_test_mem.mem:src/test.mem.in
 sorted_string_map_test_mem.mem:src/test.mem.in
 trie_map_test_mem.mem:src/test.mem.in
 rtree_test_mem.mem:src/test.mem.in
+rtree_test_bulkload_mem.mem:src/test.mem.in
 VERSION
 ])
 AC_OUTPUT
