--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ add_executable(multi-type-vector-test-default EXCLUDE_FROM_ALL ${PROJECT_SOURCE_
 add_executable(multi-type-vector-test-event EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/multi_type_vector_test_event.cpp)
 add_executable(multi-type-vector-test-perf EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/multi_type_vector_test_perf.cpp)
 add_executable(rtree-test EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/rtree_test.cpp)
+add_executable(rtree-test-bulkload EXCLUDE_FROM_ALL ${PROJECT_SOURCE_DIR}/src/rtree_test_bulkload.cpp)
 
 add_test(flat-segment-tree-test flat-segment-tree-test func)
 add_test(segment-tree-test segment-tree-test func)
@@ -50,6 +51,7 @@ add_test(multi-type-vector-test-event multi-type-vector-test-event func)
 #TODO: performance test does not need to be executed by the build.
 #add_test(multi-type-vector-test-perf multi-type-vector-test-perf)
 add_test(rtree-test rtree-test)
+add_test(rtree-test-bulkload rtree-test-bulkload)
 
 add_dependencies(check
     flat-segment-tree-test
@@ -63,6 +65,7 @@ add_dependencies(check
     point-quad-tree-test
     rectangle-set-test
     rtree-test
+    rtree-test-bulkload
     segment-tree-test
     sorted-string-map-test
     trie-map-test
