Re-authored the code example for flat_segment_tree.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ install-sh
 misc/mdds-*.pc
 missing
 multi_type_matrix_test
+multi_type_matrix_test_walk
+multi_type_vector_test_collection
+multi_type_vector_test_event
+multi_type_vector_test_side_iterator
 multi_type_vector_test_custom
 multi_type_vector_test_default
 multi_type_vector_test_perf
@@ -29,3 +33,18 @@ stlperf_test
 template_test
 test-driver
 trie_map_test
+rtree_test
+rtree_test_bulkload
+doc/_build
+doc/_doxygen
+example/flat-segment-tree
+example/multi-type-matrix
+example/multi-type-vector
+example/multi-type-vector-element-block1
+example/multi-type-vector-event1
+example/multi-type-vector-pos-hint
+example/packed-trie-map
+example/point-quad-tree
+example/rectangle-set
+example/segment-tree
+example/trie-map
